<resources>
    <string name="app_name">Beauty Shop</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="brand_name" />
    <string name="picture_content_desc">Product Picture</string>
    <string name="product_type_hint">lipstick, blush...</string>
    <string name="search_product_type">Product Type</string>
    <string name="brand_hint">maybelline, colourpop...</string>
    <string name="brand_search">Brand</string>
    <string name="item_desc">Description</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="buy">Buy</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="title_search_icon">Search</string>
    <string name="title_cart_icon">Search</string>

    <string-array name="brand_list">
        <item>almay</item>
        <item>colourpop</item>
        <item>alva</item>
        <item>anna sui</item>
        <item>maybelline</item>
        <item>green people</item>
        <item>mineral fusion</item>
        <item>wet n wild</item>
        <item>milani</item>
        <item>e.l.f.</item>
        <item>fenty</item>
        <item>pacifica</item>
        <item>sante</item>
    </string-array>

    <string-array name="product_type_list">
        <item>blush</item>
        <item>bronzer</item>
        <item>eyebrow</item>
        <item>eyeliner</item>
        <item>eyeshadow</item>
        <item>eyeliner</item>
        <item>foundation</item>
        <item>lip_liner</item>
        <item>lipstick</item>
        <item>mascara</item>
        <item>nail_polish</item>
    </string-array>
</resources>
