<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity"
    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/brand_text_view"
            android:text="@string/brand_search"
            style="@style/constantSearch"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/brand_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxStrokeColor="@color/primary"
            android:enabled="true"
            app:hintAnimationEnabled="false"
            app:expandedHintEnabled="true"
            android:background="#FFFFFF"
            android:theme="@style/changeBackgroundColor">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/brand_hint"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:id="@+id/brand_name"
                android:inputType="none"
                android:background="#FFFFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_product_type"
            android:id="@+id/product_text_view"
            style="@style/constantSearch"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/product_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            app:boxStrokeColor="@color/primary"
            android:enabled="true"
            app:hintAnimationEnabled="false"
            app:expandedHintEnabled="true"
            android:background="#FFFFFF"
            android:theme="@style/changeBackgroundColor">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/product_type_hint"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:id="@+id/product_name"
                android:inputType="text"
                android:background="#FFFFFF"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:src="@drawable/search_button"
        android:backgroundTint="#FFFFFF"/>

</RelativeLayout>