<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/full_details"
        style="@style/cardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="12dp"
        app:cardCornerRadius="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/details_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/picture_content_desc"
                android:transitionName="image"/>

            <RelativeLayout
                android:id="@+id/details_texts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/details_name"
                    style="@style/itemName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Make up blush Gamdaa"
                    android:transitionName="name"
                    android:maxLength="25"/>

                <TextView
                    android:id="@+id/details_brand"
                    style="@style/itemBrand"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/details_name"
                    tools:text="Fantastic"
                    android:transitionName="brand"/>

                <TextView
                    android:id="@+id/details_price"
                    style="@style/itemPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="11$"
                    android:transitionName="price"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp">

                <TextView
                    android:id="@+id/Desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bangers"
                    android:text="@string/item_desc"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                <TextView
                    android:id="@+id/details_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Desc"
                    android:fontFamily="@font/alatsi"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textColor="#B3FFFFFF"/>

                <Button
                    android:id="@+id/room_cart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/details_desc"
                    android:text="@string/add_to_cart"
                    android:drawableEnd="@drawable/add_to_cart"
                    android:layout_marginTop="20dp"
                    style="@style/buttonDetails"/>
                <Button
                    android:id="@+id/website_buy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/room_cart"
                    android:text="@string/buy"
                    style="@style/buttonDetails"/>

            </RelativeLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>